test_programs/compile_failure/mem2reg_fixed_point/src/main.nr
fn main() -> pub Field {
    let mut _: &mut [&mut &mut u16; 1] = &mut [&mut &mut 1_u16];
    let r: [Field] = @[];
    let i: u32 = 1;
    r[i]
}
